spacing fix for mobile view | confetti height fix

--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@ main {
   .dieContainer {
     display: grid;
     grid-template: auto auto / repeat(2, 1fr);
-    gap: 20px;
+    gap: 0px;
     margin-bottom: 50px;
   }
 }
@@ -72,7 +72,6 @@ main {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  width: 35%;
   border-radius: 8px;
   font-weight: 500;
   letter-spacing: 2px;
